--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShowAnswerActivity"></activity>
+        <activity
+            android:name=".ShowAnswerActivity"
+            android:label="查看解析"></activity>
         <activity
             android:name=".RegisterActivity"
             android:label="@string/app_name"></activity>
