--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:label="查看解析" />
         <activity
             android:name=".RegisterActivity"
-            android:label="@string/app_name" />
+            android:label="注册" />
         <activity android:name=".LogInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,9 +27,15 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".AnswerSelectActivity" />
-        <activity android:name=".ModifyPwdActivity" />
-        <activity android:name=".InstrumentActivity" />
-        <activity android:name=".ForgetActivity" />
+        <activity
+            android:name=".ModifyPwdActivity"
+            android:label="修改密码" />
+        <activity
+            android:name=".AboutUsActivity"
+            android:label="关于我们" />
+        <activity
+            android:name=".ForgetActivity"
+            android:label="忘记密码" />
     </application>
 
 </manifest>
